--- a/automacaodetarefas.ipynb
+++ b/automacaodetarefas.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Passo a passo do Problema\n",
     "- Passo1: buscar dados das ações automaticamente<br>\n",
-    "- Passo2: realizar as análises solicitadas pelo meu gestor<br>\n",
+    "- Passo2: realizar as análises<br>\n",
     "- Passo3: enviar automaticamente o e-mail com o resultado da análise"
    ]
   },
@@ -339,7 +339,7 @@
     "pyautogui.hotkey(\"ctrl\", \"v\")\n",
     "pyautogui.hotkey(\"enter\")\n",
     "\n",
-    "# clicar no botão Escreverabs\n",
+    "# clicar no botão Escrever\n",
     "pyautogui.click(x=1036, y=208) # Puxa pelo comando pyautogui.click()\n",
     "\n",
     "# digitar o destinatário\n",
@@ -353,7 +353,7 @@
     "pyautogui.hotkey(\"tab\")\n",
     "\n",
     "# preencher o corpo do e-mail\n",
-    "mensagem = \"\"\"Prezados Gestor,\n",
+    "mensagem = f\"\"\"Prezados Gestor,\n",
     "\n",
     "Conforme solicitado, segue as análises solicitadas dos últimos seis meses da ação {ticker}:\n",
     "\n",
